[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Updated to current stable version
axum = "0.7" 
# Required for async runtime
tokio = { version = "1.0", features = ["full"] }
# Required for JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Required for CORS (Frontend-Backend communication)
tower-http = { version = "0.5", features = ["cors"] }
